// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.render(chat, node, options) make api calls 1`] = `
{
  "jobs": [
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": {
        "messages": [
          {
            "text": "Hello LINE",
            "type": "text",
          },
          {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": {
              "items": [
                {
                  "action": {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": "john_doe",
      },
      "url": "v2/bot/message/push",
    },
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": null,
      "url": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": [
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": {
            "messages": [
              {
                "text": "Hello LINE",
                "type": "text",
              },
              {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": {
                  "items": [
                    {
                      "action": {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": "john_doe",
          },
          "url": "v2/bot/message/push",
        },
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": null,
          "url": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`.render(chat, node, options) works with replyToken 1`] = `
{
  "jobs": [
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": {
        "messages": [
          {
            "text": "Hello LINE",
            "type": "text",
          },
          {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": {
              "items": [
                {
                  "action": {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "url": "v2/bot/message/reply",
    },
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "params": null,
      "url": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": [
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": {
            "messages": [
              {
                "text": "Hello LINE",
                "type": "text",
              },
              {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": {
                  "items": [
                    {
                      "action": {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "replyToken": "__REPLY_TOKEN__",
          },
          "url": "v2/bot/message/reply",
        },
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "params": null,
          "url": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`.renderMulticast(channel, userIds, message) make api call to message/mulitcast 1`] = `
{
  "jobs": [
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "params": {
        "messages": [
          {
            "text": "Hello LINE",
            "type": "text",
          },
          {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": {
              "items": [
                {
                  "action": {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": [
          "john",
          "wick",
          "dog",
        ],
      },
      "url": "v2/bot/message/multicast",
    },
    {
      "accessToken": undefined,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "params": {
        "richMenuId": "newbie",
        "userIds": [
          "john",
          "wick",
          "dog",
        ],
      },
      "url": "v2/bot/richmenu/bulk/link",
    },
  ],
  "results": [
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
    {
      "body": {},
      "code": 200,
      "headers": {},
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "params": {
            "messages": [
              {
                "text": "Hello LINE",
                "type": "text",
              },
              {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": {
                  "items": [
                    {
                      "action": {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": [
              "john",
              "wick",
              "dog",
            ],
          },
          "url": "v2/bot/message/multicast",
        },
        {
          "accessToken": undefined,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "params": {
            "richMenuId": "newbie",
            "userIds": [
              "john",
              "wick",
              "dog",
            ],
          },
          "url": "v2/bot/richmenu/bulk/link",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
